src/styles/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));
@plugin "@tailwindcss/typography";

@theme inline {
  --font-space-grotesk:
    var(--font-space-grotesk), ui-sans-serif, system-ui, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-figtree:
    var(--font-figtree), ui-sans-serif, system-ui, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";

  --container-8xl: 96rem;
  --container-9xl: 104rem;

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --color-success: var(--success);
  --color-success-foreground: var(--success-foreground);
  --color-info: var(--info);
  --color-info-foreground: var(--info-foreground);
  --color-warning: var(--warning);
  --color-warning-foreground: var(--warning-foreground);
  --color-error: var(--error);
  --color-error-foreground: var(--error-foreground);

  --color-code-background: var(--code-background);

  --animate-fade-in: fade-in 1s ease-in-out forwards;
  --animate-title: title 1s ease-out forwards;
  --animate-fade-left: fade-left 1s ease-in-out forwards;
  --animate-fade-right: fade-right 1s ease-in-out forwards;
  --animate-collapsible-down: collapsible-down 0.3s ease-out;
  --animate-collapsible-up: collapsible-up 0.3s ease-out;

  --animate-scaleUpAndDown: scaleUpAndDown 1.1s ease infinite;
  --animate-pingMd: pingMd 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  --animate-pingSm: pingSm 1.1s cubic-bezier(0, 0, 0.2, 1) infinite;
  --animate-circleSvgGrow: circleSvgGrow 1200ms;
  --animate-loadingFadeIn:
    loadingFadeIn 500ms 600ms forwards, scaleUpAndDown 1.1s ease infinite;

  @keyframes fade-in {
    0% {
      opacity: 0%;
    }
    75% {
      opacity: 0%;
    }
    100% {
      opacity: 100%;
    }
  }

  @keyframes title {
    0% {
      line-height: 0%;
      letter-spacing: 0.25em;
      opacity: 0;
    }
    25% {
      line-height: 0%;
      opacity: 0%;
    }
    80% {
      opacity: 100%;
    }
    100% {
      line-height: 100%;
      opacity: 100%;
    }
  }

  @keyframes fade-left {
    0% {
      transform: translateX(100%);
      opacity: 0%;
    }
    30% {
      transform: translateX(0%);
      opacity: 100%;
    }
    100% {
      opacity: 0%;
    }
  }

  @keyframes fade-right {
    0% {
      transform: translateX(-100%);
      opacity: 0%;
    }
    30% {
      transform: translateX(0%);
      opacity: 100%;
    }
    100% {
      opacity: 0%;
    }
  }

  @keyframes scaleUpAndDown {
    0% {
      transform: scale(1);
    }
    55% {
      transform: scale(1.07);
    }
    100% {
      transform: scale(1);
    }
  }
  @keyframes pingMd {
    95%,
    100% {
      transform: scale(1.8);
      opacity: 0;
    }
  }
  @keyframes pingSm {
    95%,
    100% {
      transform: scale(1.5);
      opacity: 0;
    }
  }
  @keyframes circleSvgGrow {
    from {
      stroke-dasharray: calc(var(--circumference) * 0), var(--circumference);
    }
    to {
      stroke-dasharray: calc(var(--circumference) * 0.25), var(--circumference);
    }
  }
  @keyframes loadingFadeIn {
    from {
      opacity: 0;
    }

    to {
      opacity: 1;
    }
  }
}

:root {
  --radius: 0.65rem;

  --site-header-height: 3.25rem;
  --code-background: var(--color-muted);

  --success: oklch(95.5% 0.025 158.883);
  --success-foreground: oklch(35% 0.18 146.625);
  --info: oklch(95% 0.015 244.483);
  --info-foreground: oklch(35% 0.19 255.001);
  --warning: oklch(97% 0.02 95.255);
  --warning-foreground: oklch(68.1% 0.162 75.834);
  --error: oklch(95% 0.02 17.066);
  --error-foreground: oklch(40% 0.25 29.223);

  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.205 0 0);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.708 0 0);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.205 0 0);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.708 0 0);
}

.dark {
  --code-background: #171717;

  --success: oklch(21.066% 0.04977 157.455);
  --success-foreground: oklch(86.352% 0.16984 157.782);
  --info: oklch(15.718% 0.04534 250.707);
  --info-foreground: oklch(67.441% 0.15279 258.345);
  --warning: oklch(22.938% 0.05121 113.206);
  --warning-foreground: oklch(86.347% 0.1414 92.293);
  --error: oklch(19.941% 0.06431 23.545);
  --error-foreground: oklch(79.847% 0.11592 17.944);

  --background: oklch(0.145 0 0);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.205 0 0);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.205 0 0);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.922 0 0);
  --primary-foreground: oklch(0.205 0 0);
  --secondary: oklch(0.269 0 0);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.269 0 0);
  --muted-foreground: oklch(0.708 0 0);
  --accent: oklch(0.269 0 0);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.556 0 0);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
  * {
    @apply scroll-smooth border-border outline-ring/50;
  }
  body {
    @apply mx-auto bg-background text-foreground;
  }

  [id] {
    @apply scroll-m-24;
  }

  ::selection {
    @apply bg-primary text-primary-foreground;
  }

  *:not(body, html) {
    scrollbar-width: thin;
    scrollbar-color: var(--muted-foreground) transparent;
  }
}

@layer components {
  .shiki {
    border-radius: calc(var(--radius));
    padding: 1rem;
    overflow-x: auto;
    max-width: 100%;

    pre {
      overflow-x: auto;
      white-space: pre;
      max-width: 100%;
      margin: 0;
      padding: 0;
    }

    code {
      white-space: pre;
      word-wrap: normal;
      overflow-wrap: normal;

      counter-reset: step;
      counter-increment: step 0;
    }

    code .line::before {
      content: counter(step);
      counter-increment: step;
      width: 1rem;
      margin-right: 1.5rem;
      display: inline-block;
      text-align: right;
      color: var(--muted-foreground);
    }
  }

  html.dark .shiki,
  html.dark .shiki span {
    color: var(--shiki-dark) !important;
    background-color: var(--code-background) !important;
  }

  html .shiki,
  html .shiki span {
    background-color: var(--code-background) !important;
  }
}

.no-visible-scrollbar {
  scrollbar-width: none;
  -ms-overflow-style: none;
  -webkit-overflow-scrolling: touch;

  &::-webkit-scrollbar {
    display: none;
  }
}

.scrollbar-on-hover {
  &:hover,
  &:focus-visible {
    scrollbar-width: thin;
    -ms-overflow-style: auto;
    -webkit-overflow-scrolling: auto;

    scrollbar-color: var(--muted-foreground) transparent;
    &::-webkit-scrollbar {
      display: block;
    }
  }

  scrollbar-width: none;
  -ms-overflow-style: none;
  -webkit-overflow-scrolling: touch;

  &::-webkit-scrollbar {
    display: none;
  }
}

.typography {
  @apply prose prose-custom dark:prose-invert prose-code:w-fit prose-code:rounded-sm prose-code:bg-secondary prose-code:px-1 prose-code:py-0.5 prose-code:tracking-wide prose-code:text-secondary-foreground prose-code:before:content-none prose-code:after:content-none prose-img:my-3 prose-img:rounded-sm;
}

@utility prose-custom {
  --tw-prose-body: var(--foreground);
  --tw-prose-headings: var(--foreground);
  --tw-prose-lead: var(--muted-foreground);
  --tw-prose-links: var(--foreground);
  --tw-prose-bold: var(--foreground);
  --tw-prose-counters: var(--muted-foreground);
  --tw-prose-bullets: var(--muted-foreground);
  --tw-prose-hr: var(--border);
  --tw-prose-quotes: var(--foreground);
  --tw-prose-quote-borders: var(--border);
  --tw-prose-captions: var(--muted-foreground);
  --tw-prose-code: var(--secondary-foreground);
  --tw-prose-pre-code: var(--muted-foreground);
  --tw-prose-pre-bg: var(--code-background);
  --tw-prose-th-borders: var(--border);
  --tw-prose-td-borders: var(--border);
  --tw-prose-invert-body: var(--foreground);
  --tw-prose-invert-headings: var(--foreground);
  --tw-prose-invert-lead: var(--muted-foreground);
  --tw-prose-invert-links: var(--foreground);
  --tw-prose-invert-bold: var(--foreground);
  --tw-prose-invert-counters: var(--muted-foreground);
  --tw-prose-invert-bullets: var(--muted-foreground);
  --tw-prose-invert-hr: var(--border);
  --tw-prose-invert-quotes: var(--foreground);
  --tw-prose-invert-quote-borders: var(--border);
  --tw-prose-invert-captions: var(--muted-foreground);
  --tw-prose-invert-code: var(--foreground);
  --tw-prose-invert-pre-code: var(--muted-foreground);
  --tw-prose-invert-pre-bg: var(--code-background);
  --tw-prose-invert-th-borders: var(--border);
  --tw-prose-invert-td-borders: var(--border);
}

